fix: fix card component overflow on mobile view

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,13 @@
 @custom-variant dark (&:is(.dark *));
 
 @font-face {
+  font-family: "Circular Std Light";
+  src: url("/fonts/CircularStd-Light.otf");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "Circular Std Normal";
   src: url("/fonts/CircularStd-Book.ttf");
   font-weight: 400;
@@ -72,6 +79,7 @@ body {
 }
 
 @theme {
+  --font-circular-light: "Circular Std Light";
   --font-circular-normal: "Circular Std Normal";
   --font-circular-medium: "Circular Std Medium";
   --font-circular-bold: "Circular Std Bold";
